update the code

--- a/src/App.css
+++ b/src/App.css
@@ -281,7 +281,7 @@ body {
 
   font-size: 1.6rem;
   margin-bottom: 1rem;
-  color: #f7fafc;
+  color: #0c0d0db3;
   font-weight: 400;
   animation: fadeInUp 1s ease-out 0.4s both;
    position: relative;
